2013-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (set_non_blocking): Do not attempt F_SETFL if F_GETFL fails.
	(do_set_non_blocking): Add support for case when called with a single
	"" argument.

2013-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_signal): If sigaction is unavailable, fall back to
	signal and hope that it does the right thing.

2013-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac (AC_CHECK_FUNCS): Add kill and sigprocmask.
	* select.c (get_signal_number): Change error messages since now may
	be called by "kill" as well as "select_signal".
	(do_signal): Add a lint warning if there are more than 2 args.
	(do_kill): Add new function to send a signal.
	(do_select): Support platforms where sigprocmask is not available.
	There will be a race condition on such platforms, but that is not
	easily avoided.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_select): Now that the API flatten_array call has been
	patched to ensure that the index values are strings, we can remove
	the code to check for the AWK_NUMBER case.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_select): Do not treat a numeric command value as a
	file descriptor unless the command type is empty.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add errlist.h and siglist.h.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (set_non_blocking): New helper function to call fcntl.
	(do_set_non_blocking): Add support for the case where there's a single
	integer fd argument.

2013-07-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_set_non_blocking): Implement new set_non_blocking
	function.
	(func_table): Add set_non_blocking.
